# polyloop

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/polyloop/: __init__.py  cli.py  config.py  constants.py  frontmatter.py  providers.py  scaffold.py  status.py  tmux.py
src/polyloop/templates/: AGENTS.md  CAMPAIGN.md  CURRENT_EXPERIMENT.md  EXPERIMENT_TEMPLATE.md  FUNCTIONALITY_LOG.md  LEADERBOARD.md  LESSONS.md  PROJECT_CHARTER.md  gitignore.md
src/polyloop/templates/roles/: bot-builder.md  bot-integrator.md  bot-reality.md  builder.md  council.md  manager.md  reality.md  retrospector.md  shared.md  strat-builder.md  strat-council.md  strat-verifier.md  validator.md  verifier.md
tests/: test_config.py  test_frontmatter.py  test_providers.py  test_scaffold.py  test_status.py  test_tmux_integration.py
