[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "polyloop"
version = "0.2.0"
description = "A bounded, tmux-native orchestration scaffold for evidence-driven strategy experiments"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "trinath-y" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = []

[project.scripts]
polyloop = "polyloop.cli:main"

[project.urls]
Repository = "https://github.com/yty-build/polyloop"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
polyloop = ["templates/*.md", "templates/roles/*.md"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
